--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,32 @@ body {
   flex: 0.9;
 }
 
+.app__right {
+  display: flex;
+  flex-direction: column;
+}
+
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.MuiCardContent-root > div {
+  flex-grow: 1;
+}
+
 .app__stats {
   display: flex;
   justify-content: space-between;
+}
+
+.app__graph {
+  flex-grow: 1;
+}
+
+.app__graphTitle {
+  margin-top: 20px;
 }
 
 @media (max-width: 990px) {
